homepage coming along.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,48 +1,102 @@
 <div class="center-div">
   <div class="card main">
 
-    <div class="card-header">
+    <div class="card-header" style="border-radius: 5%; position: relative; top: -90px;">
 
 
-      <img src="../../../assets/sharks/loungingAkula.png" alt="logo" height="150vh" width="150vw"
+      <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="400vh" width="400vw"
         style="border-radius: 5%" />
       <br>
       <h3 class="card-text">
         <br>
-        <u> Welcome to Toonverse</u>
+        <u> Welcome to Toonverse Studios!</u>
       </h3>
-      <p> An umbrella trust of multiple LLC's</p>
+      <p> A WEB3 Art development platfrom.</p>
 
 
 
-      <p>SudoSharkSolutions : An IT Solutions Firm.</p>
-
-      <p>SudoSharkResearchGroup : A Frading Firm.</p>
-
-      <p>SudoSharkCreative : A Digital Media Firm</p>
-
-      <p>SudoSharkRecruiting : An IT Recruiting Firm</p>
-
-    </div>
-    <div class="card-body">
-
-
-
-      <h5 class="card-text">
-        <u> Legal Disclaimer</u>
-      </h5>
-      <p>
-        The creators and maintainers of Sudo Shark Services are not liable for any loss when trading
-        cryptocurrency tokens. The information provided on Sudo Shark Services website does not constitute legal advise,
-        investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any of
-        the website’s content as such. Please note, there are always risks associated with smart contracts, use them at
-        your own risk. Sudo Shark Services is not a registered broker, analyst, or investment advisor, nor does Sudo
-        Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own due
-        diligence and consult your financial advisor before making any financial decisions. Always make sure that you
-        are in compliance with your local laws and regulations before
-        you make any purchase.
-
+      <p>This is home page for all things Toonverse and for the DevilCatz holders.</p>
+      <br>
+      <br>
+      <h6>Coming Up to All Devil Cats Holders!</h6>
+      <p> We will be releasing **TWO FREE MINTS** to DevilCatz holders. <br>
+        Ladies and Gentlemen we introduce to you..<br>
+        CrazyCloudClans and FrutiyGremlins.Wtf<br>
       </p>
+
+      <div class="grid-container">
+        <div class="grid-item" style="float: right;">
+          <div id="card-free-mints">
+            <div class="card-header">
+              <p>CrazyCloudz.Fluff</p>
+            </div>
+
+            <div class="card-body">
+              <img id="cloudz-img" src="../../../assets/toonverse/clouds/clouds.gif" alt="logo" height="200vh"
+                width="200vw" style="border-radius: 5%" />
+            </div>
+
+            <div class="card-text">
+              <p>Fun cute cloudz made by none other than the Ledgendary Artist KEITH MILLER</p>
+
+            </div>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div id="card-free-mints">
+            <div class="card-header">
+              <p>FruitTownGremlins.Wtf</p>
+            </div>
+
+            <div class="card-body">
+              <img id="gremlins-img" src="../../../assets/toonverse/fruitgoblins.wtf/fruitTownGremlins.gif" alt="logo"
+                height="200vh" width="200vw" style="border-radius: 5%" />
+            </div>
+
+            <div class="card-text">
+              <p>Fun Gremlins derivative from the crazy mind of KEITH MILLER</p>
+              <br>
+              <br>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+      <div class="card-body">
+
+
+        <h6> **Coming Soon Devil Cat Staking**</h6><
+        <br>
+        <p> We will be releasing the tokenzation of DevilCatz and staking.
+          Future airdrops will be paid in DevilCatz homegrown token to mint future collections.
+          <br>
+          
+        </p>
+
+        <h5 class="card-text">
+          <br>
+          <br>
+          <br>
+
+          <u> Legal Disclaimer</u>
+        </h5>
+        <p>
+          The creators and maintainers of Toonverse Studios are not liable for any loss when trading
+          cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
+          advise,
+          investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any
+          of
+          the website’s content as such. Please note, there are always risks associated with smart contracts, use them
+          at
+          your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
+          Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own due
+          diligence and consult your financial advisor before making any financial decisions. Always make sure that you
+          are in compliance with your local laws and regulations before
+          you make any purchase.
+
+        </p>
+      </div>
     </div>
   </div>
-</div>
