--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -6,14 +6,14 @@
     <a class="navbar-brand text-white" [routerLink]="['/home']">
           <div class="navbar-image">
         <img
-          src="./../../../assets/sharks/loungingAkula.png"
+          src="./../../../assets/toonverse/toonverseLogo.png"
           alt="logo"
           width="50"
           style="border-radius: 50%;"
         />
       </div>
     
-      <h6 id="navbar-text">Sudo Shark Services</h6>
+      <h6 id="navbar-text">Toonverse Studios!</h6>
     </a>
 
  
