--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 
 body {
   // background-image: url("https://thebuddhainu.s3.amazonaws.com/background.png");
-  background-image: url("./assets/sharks/cyberSharksSwimming.jpg");
+  background-image: url("./assets/toonverse/background.jpg");
   // -webkit-background-size: wrap;
   // -moz-background-size: cover;
   // -o-background-size: cover;
@@ -14,7 +14,7 @@ body {
 .main {
   background-color: #fbf1e6;
   border: 1mm ridge pink;
-  width: 65%;
+  // width: 65%;
   min-width: 400px;
   opacity: 99%;
 
@@ -37,6 +37,7 @@ body {
   margin-right: auto;
 
 }
+
 
 .center-div {
   padding: 1%;
