Homepage coming along.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,6 +17,23 @@
 
       <p>This is home page for all things Toonverse and for the DevilCatz holders.</p>
       <br>
+
+      <div class="card" id="card-devilcat" style="width: 50%; ">
+        <h6>**MINTING NOW**</h6>
+        <div class="card-body">
+          <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="400vh" width="400vw"
+            style="border-radius: 5%" />
+          <div class="card-text">
+            <p> The Devil Cats Minting is taking place now. Currently 1602 out of 2222.</p>
+            <button class="favorite styled" type="button">
+              Go To Mint
+            </button>
+
+          </div>
+        </div>
+      </div>
+
+
       <br>
       <h6>Coming Up to All Devil Cats Holders!</h6>
       <p> We will be releasing **TWO FREE MINTS** to DevilCatz holders. <br>
@@ -67,36 +84,39 @@
       <div class="card-body">
 
 
-        <h6> **Coming Soon Devil Cat Staking**</h6><
-        <br>
-        <p> We will be releasing the tokenzation of DevilCatz and staking.
-          Future airdrops will be paid in DevilCatz homegrown token to mint future collections.
-          <br>
-          
-        </p>
+        <h6> **Coming Soon Devil Cat Staking**</h6>
+        < <br>
+          <p> We will be releasing the tokenzation of DevilCatz and staking.
+            Future airdrops will be paid in DevilCatz homegrown token to mint future collections.
+            <br>
 
-        <h5 class="card-text">
-          <br>
-          <br>
-          <br>
+          </p>
 
-          <u> Legal Disclaimer</u>
-        </h5>
-        <p>
-          The creators and maintainers of Toonverse Studios are not liable for any loss when trading
-          cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
-          advise,
-          investment advice, financial advice, trading advice, or any other sort of advice and you should not treat any
-          of
-          the website’s content as such. Please note, there are always risks associated with smart contracts, use them
-          at
-          your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
-          Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own due
-          diligence and consult your financial advisor before making any financial decisions. Always make sure that you
-          are in compliance with your local laws and regulations before
-          you make any purchase.
+          <h5 class="card-text">
+            <br>
+            <br>
+            <br>
 
-        </p>
+            <u> Legal Disclaimer</u>
+          </h5>
+          <p>
+            The creators and maintainers of Toonverse Studios are not liable for any loss when trading
+            cryptocurrency tokens. The information provided on Toonverse Studios website does not constitute legal
+            advise,
+            investment advice, financial advice, trading advice, or any other sort of advice and you should not treat
+            any
+            of
+            the website’s content as such. Please note, there are always risks associated with smart contracts, use them
+            at
+            your own risk. Toonverse Studios is not a registered broker, analyst, or investment advisor, nor does Sudo
+            Shark Services team recommend that any cryptocurrency be bought, sold, or held by you. Do conduct your own
+            due
+            diligence and consult your financial advisor before making any financial decisions. Always make sure that
+            you
+            are in compliance with your local laws and regulations before
+            you make any purchase.
+
+          </p>
       </div>
     </div>
   </div>
