--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,43 +3,62 @@
   <!-- Container wrapper -->
   <div class="container-fluid">
     <!-- Navbar brand -->
-    <a class="navbar-brand text-white" [routerLink]="['/home']">
-          <div class="navbar-image">
-        <img
-          src="./../../../assets/toonverse/toonverseLogo.png"
-          alt="logo"
-          width="50"
-          style="border-radius: 50%;"
-        />
-      </div>
-    
-      <h6 id="navbar-text">Toonverse Studios!</h6>
+    <a class="navbar-brand" href="#">
+
+      <a class="navbar-brand text-white" [routerLink]="['/home']">
+            <div class="navbar-image">
+          <img src="./../../../assets/toonverse/toonverseLogo.png" alt="logo" width="50" style="border-radius: 50%;" />
+        </div>
+
+        <h6  id="navbar-text">Toonverse Studios!</h6>
+
+      </a>
+
     </a>
 
- 
+    <!-- Toggle button -->
+    <button class="navbar-toggler" type="button" (click)="basicNavbar.toggle()" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <i class="fas fa-bars"></i>
+    </button>
+
     <!-- Collapsible wrapper -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent" mdbCollapse #basicNavbar="mdbCollapse">
+      <!-- Left links -->
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item" id="nav-item">
+          <p id="navbar-text"  class="styled" aria-current="page" href="#">About</p>
+        </li>
+        <li class="nav-item">
+          <p id="navbar-text" class="styled" [routerLink]="['/home']">Team</p>
+        </li>
+        <li class="nav-item">
+          <p id="navbar-text"  class="styled"[routerLink]="['/home']">RoadMap</p>
+        </li>
+        <li class="nav-item">
+          <p id="navbar-text"  class="styled"[routerLink]="['/home']">Free Mints</p>
+        </li>
+      </ul>
+      <!-- Left links -->
 
+      <!-- Search form -->
+        <button id="navbar-text" class="styled" [routerLink]="['/home']">Mint DevilCat</button>
+        <button id="navbar-text" class="styled" [routerLink]="['/home']">Stake DevilCat</button>
+      <!-- <form class="d-flex input-group w-auto">
+        <input
+          type="search"
+          class="form-control"
+          placeholder="Type query"
+          aria-label="Search"
+        />
+        <button class="btn btn-outline-primary" type="button">
+          Search
+        </button>
+      </form> -->
+
+    </div>
+    <!-- Collapsible wrapper -->
   </div>
-  <!-- <button
-  style="margin-right: 25px;"
-  *ngIf="this.isConnected == false"
-
-  class="favorite styled"
-  type="button"
-  (click)="tryAndConnect(true)"
-
->
-  Connect 
-</button>
-<button
-style="margin-right: 25px;"
-*ngIf="this.isConnected == true"
-
-  class="favorite styled"
-  type="button"
-  (click)="tryAndConnect(false)"
-
->
-  Disconnect 
-</button> -->
+  <!-- Container wrapper -->
 </nav>
+<!-- Navbar -->
