Homepage coming along.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,58 +53,58 @@ body {
   align-items: center;
 }
 
-// .styled {
-//   max-width: 200px;
+.styled {
+  max-width: 200px;
 
-//   min-width: 150px;
-//   margin-bottom: 4px;
-//   border: 0;
-//   line-height: 2.5;
-//   padding: 0 20px;
-//   font-size: 1rem;
-//   text-align: center;
-//   color: black;
-//   text-shadow: 1px 1px 1px #000;
-//   border-radius: 10px;
-//   background-color: pink;
-//   background-image: linear-gradient(to top left,
-//       rgba(0, 0, 0, 0.2),
-//       rgba(0, 0, 0, 0.2) 30%,
-//       rgba(0, 0, 0, 0));
-//   box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-// }
+  min-width: 150px;
+  margin-bottom: 4px;
+  border: 0;
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: black;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: pink;
+  background-image: linear-gradient(to top left,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2) 30%,
+      rgba(0, 0, 0, 0));
+  box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+}
 
-// .styledDisabled {
-//   max-width: 200px;
+.styledDisabled {
+  max-width: 200px;
 
-//   min-width: 150px;
-//   margin-bottom: 4px;
-//   border: 0;
-//   line-height: 2.5;
-//   padding: 0 20px;
-//   font-size: 1rem;
-//   text-align: center;
-//   color: black;
-//   text-shadow: 1px 1px 1px #000;
-//   border-radius: 10px;
-//   background-color: rgb(141, 139, 110);
-//   background-image: linear-gradient(to top left,
-//       rgba(0, 0, 0, 0.2),
-//       rgba(0, 0, 0, 0.2) 30%,
-//       rgba(0, 0, 0, 0));
-//   box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-// }
+  min-width: 150px;
+  margin-bottom: 4px;
+  border: 0;
+  line-height: 2.5;
+  padding: 0 20px;
+  font-size: 1rem;
+  text-align: center;
+  color: black;
+  text-shadow: 1px 1px 1px #000;
+  border-radius: 10px;
+  background-color: rgb(141, 139, 110);
+  background-image: linear-gradient(to top left,
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2) 30%,
+      rgba(0, 0, 0, 0));
+  box-shadow: inset 2px 2px 3px pink, inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+}
 
-// .styled:hover {
-//   background-color: pink;
-//   box-shadow: inset 2px 2px 3px rgb(108, 34, 46), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
-//   font-size: 1.05rem;
-// }
+.styled:hover {
+  background-color: pink;
+  box-shadow: inset 2px 2px 3px rgb(108, 34, 46), inset -2px -2px 3px rgba(0, 0, 0, 0.6);
+  font-size: 1.05rem;
+}
 
-// .styled:active {
-//   box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
-//     inset 2px 2px 3px rgba(0, 0, 0, 0.6);
-// }
+.styled:active {
+  box-shadow: inset -2px -2px 3px rgba(255, 255, 255, 0.6),
+    inset 2px 2px 3px rgba(0, 0, 0, 0.6);
+}
 
 // @font-face {
 //   font-family: EncodeSansCondensedBold;
