--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -24,7 +24,9 @@
           <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="400vh" width="400vw"
             style="border-radius: 5%" />
           <div class="card-text">
-            <p> The Devil Cats Minting is taking place now. Currently 1602 out of 2222.</p>
+            <p> The Devil Cats Minting is taking place now.
+              <br> Currently 1602 out of 2222.
+            <br> Owning a DevilCatz token entitles you to future collection drops.</p>
             <button class="favorite styled" type="button">
               Go To Mint
             </button>
