Minting page coming along.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,9 +27,8 @@
             <p> The Devil Cats Minting is taking place now.
               <br> Currently 1602 out of 2222.
             <br> Owning a DevilCatz token entitles you to future collection drops.</p>
-            <button class="favorite styled" type="button">
-              Go To Mint
-            </button>
+            <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
+
 
           </div>
         </div>
