--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -27,7 +27,7 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item" id="nav-item">
-          <p id="navbar-text"  class="styled" aria-current="page" href="#">About</p>
+          <p id="navbar-text" class="styled" [routerLink]="['/home']">about</p>
         </li>
         <li class="nav-item">
           <p id="navbar-text" class="styled" [routerLink]="['/home']">Team</p>
@@ -42,7 +42,7 @@
       <!-- Left links -->
 
       <!-- Search form -->
-        <button id="navbar-text" class="styled" [routerLink]="['/home']">Mint DevilCat</button>
+        <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
         <button id="navbar-text" class="styled" [routerLink]="['/home']">Stake DevilCat</button>
       <!-- <form class="d-flex input-group w-auto">
         <input
