--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -32,106 +32,131 @@
             <br>
             <a href="https://rarible.com/toonverseStudios">Rarible</a>
           </h4>
-
-
-
-
-          <p class="paragraph">The ToonVerse is a multi-collection mega project based on cartoon character development
-            with the goal of branding, storytelling, and syndication. Each of the primary NFT collections, starting with
+          <p class="paragraph">The ToonVerse is a multi-collection mega project based on cartoon character
+            development
+            with the goal of branding, storytelling, and syndication. Each of the primary NFT collections,
+            starting
+            with
             the Devil Catz are a main character in our world building and animated series.<br>
             <br>
-            Price = {{contractPrice}} Eth
-            <br>
-            Max Mint = 50
-            <br>
-            Buy 1 get 1 free starting at 3.
-            <br>
-            Buy 1 only get 1
-            <br>
-            Buy 2 only get 2
-            <br>
-            ***Then 2x Multiplier Bonus Kicks in...***
-            <br>
-            Buy 3 get a total of 6
-
-            <br>
-            Buy 4 get a total of 8
-            <br>
-            ...
-            <br>
-            Buy 50 get a total of 100
-            <br>
-            ^ Max mint amount. ^
-            <br>
-            <br>
-            This is a gas optimized ERC721A contract
-            <br>
-            Pixelated version of cats included.
-            :)
-            <br>
-
-            <div class="container" style="width:75%;">
-          <div class="div-quantity-selector">
-
-            <button class="mint-button w-button" (click)="minus()">
-              - </button>
-
-
-            <!-- <a id="mint-minusone" href="#"
-                  class="btn-quantity w-node-_0d2f99db-be57-70d7-001f-b14912b81a95-05774dfd 
-                  w-button">-</a> -->
-
-
-            <div id="w-node-f852b6d0-e5e3-30d3-5f48-21de007db10c-05774dfd" class="w-embed">
-              <input type="number" class="text-field w-input" max="50" maxlength="256" name="email" data-name="Email"
-                placeholder="" id="mint-quantity" required="" [ngModel]="numToBuy" type="number"
-                (ngModelChange)="updatePrice($event)" min="1" max="50" step="1"
-                onfocus="this.previousValue = this.value"
-                onkeydown="if(event.key==='.'){event.preventDefault();} this.previousValue =this.value"
-                placeholder="Amount To Buy">
-
-              <br>
-
-              <!-- <input [ngModel]="numToBuy" type="number" (ngModelChange)="updatePrice($event)" min="0" max="100000000000"
-                    step="1" onfocus="this.previousValue = this.value"
-                    onkeydown="if(event.key==='.'){event.preventDefault();} this.previousValue =this.value"
-                    class="form-control" placeholder="Amount To Buy" /> -->
-            </div>
-            <button class="mint-button w-button" (click)="plus()">
-              + </button>
-          </div>
-          
-          <p class="">{{numToBuy}} = {{totalPrice}} ETH<br> Total Recieved With Multiplier = {{multiplier}} </p>
-
-
-
-
-
-          <br><br>
-          <div *ngIf="this.userAddress == ''">
-            <button class="mint-button w-button" (click)="connect()">
-              Connect Wallet
-            </button>
-          </div>
-          <div *ngIf="this.userAddress != '' && this.totalPrice!='0'">
-            <button class="mint-button w-button" type="submit" (click)="buy()">
-              Mint
-            </button>
-          </div>
-          <div *ngIf="this.userAddress != '' && this.totalPrice=='0'">
-            <button class="mint-button w-button" type="submit" (click)="buy()">
-              Disabled
-            </button>
-          </div>
-          <p>
-            <br>
-
+            
           </p>
-          <div *ngIf="this.error">
-            <p style="color: red">Found Error : {{ error }}</p>
+
+          <p> The Devil Cats Minting is taking place now.
+            <br> Currently 1602 out of 2222.
+            <br> Owning a DevilCatz token entitles you to future collection drops.
+          </p>
+          <br>
+          This is a gas optimized ERC721A contract
+          <br>
+          Pixelated version of cats included.
+          :)
+          <br>
+
+
+          <div class="card" id="card-devilcat" style="width: 50%; ">
+            <h6>**MINT NOW**</h6>
+            <div class="card-body">
+              <img id="center-img-gif" src="../../../assets/toonverse/slow.gif" alt="logo" height="400vh" width="400vw"
+                style="border-radius: 5%" />
+              <div class="card-text">
+                <p>
+                  Price = {{contractPrice}} Eth
+                  <br>
+                  Max Mint = 50
+                  <br>
+                  Buy 1 get 1 free starting at 3.
+                  <br>
+                  Buy 1 only get 1
+                  <br>
+                  Buy 2 only get 2
+                  <br>
+                  ***Then 2x Multiplier Bonus Kicks in...***
+                  <br>
+                  Buy 3 get a total of 6
+
+                  <br>
+                  Buy 4 get a total of 8
+                  <br>
+                  ...
+                  <br>
+                  Buy 50 get a total of 100
+                  <br>
+                  ^ Max mint amount. ^
+                  <br>
+                </p>
+
+            
+                <div class="div-quantity-selector" style="justify-items: center;">
+
+                  <button class="mint-button w-button" (click)="minus()">
+                    - </button>
+
+
+                  <!-- <a id="mint-minusone" href="#"
+                        class="btn-quantity w-node-_0d2f99db-be57-70d7-001f-b14912b81a95-05774dfd 
+                        w-button">-</a> -->
+
+
+                  <div id="w-node-f852b6d0-e5e3-30d3-5f48-21de007db10c-05774dfd" class="w-embed">
+                    <input type="number" class="text-field w-input" max="50" maxlength="256" name="email"
+                      data-name="Email" placeholder="" id="mint-quantity" required="" [ngModel]="numToBuy" type="number"
+                      (ngModelChange)="updatePrice($event)" min="1" max="50" step="1"
+                      onfocus="this.previousValue = this.value"
+                      onkeydown="if(event.key==='.'){event.preventDefault();} this.previousValue =this.value"
+                      placeholder="Amount To Buy">
+
+                    <br>
+
+                    <!-- <input [ngModel]="numToBuy" type="number" (ngModelChange)="updatePrice($event)" min="0" max="100000000000"
+                          step="1" onfocus="this.previousValue = this.value"
+                          onkeydown="if(event.key==='.'){event.preventDefault();} this.previousValue =this.value"
+                          class="form-control" placeholder="Amount To Buy" /> -->
+                  </div>
+                  <button class="mint-button w-button" (click)="plus()">
+                    + </button>
+                </div>
+
+                <p class="">{{numToBuy}} = {{totalPrice}} ETH<br> Total Recieved With Multiplier = {{multiplier}} </p>
+                <br><br>
+                <div *ngIf="this.userAddress == ''">
+                  <!-- <button class="mint-button w-button" (click)="connect()">
+                    Connect Wallet
+                  </button> -->
+                  <button id="navbar-text" class="styled" [routerLink]="['/mint']">Mint DevilCat</button>
+                </div>
+                <div *ngIf="this.userAddress != '' && this.totalPrice!='0'">
+                  <button class="mint-button w-button" type="submit" (click)="buy()">
+                    Mint
+                  </button>
+                </div>
+                <div *ngIf="this.userAddress != '' && this.totalPrice=='0'">
+                  <button class="mint-button w-button" type="submit" (click)="buy()">
+                    Disabled
+                  </button>
+                </div>
+                <p>
+                  <br>
+
+                </p>
+                <div *ngIf="this.error">
+                  <p style="color: red">Found Error : {{ error }}</p>
+                </div>
+
+
+
+
+              </div>
+            </div>
           </div>
+
+
+
+
+          <!-- <div class="container" style="width:50%;"> -->
+
 
         </div>
       </div>
-      </div>
+      <!-- </div> -->
     </div>
