--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -30,13 +30,13 @@
           <p id="navbar-text" class="styled" [routerLink]="['/home']">about</p>
         </li>
         <li class="nav-item">
-          <p id="navbar-text" class="styled" [routerLink]="['/home']">Team</p>
+          <p id="navbar-text" class="styled" [routerLink]="['/team']">Team</p>
         </li>
         <li class="nav-item">
-          <p id="navbar-text"  class="styled"[routerLink]="['/home']">RoadMap</p>
+          <p id="navbar-text"  class="styled"[routerLink]="['/roadmap']">RoadMap</p>
         </li>
         <li class="nav-item">
-          <p id="navbar-text"  class="styled"[routerLink]="['/home']">Free Mints</p>
+          <p id="navbar-text"  class="styled"[routerLink]="['/mint']">Free Mints</p>
         </li>
       </ul>
       <!-- Left links -->
