--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,13 +1,7 @@
 <div class="center-div">
   <div class="card main">
     <div class="center-img">
-      <img
-        src="assets/mainBuddha.png"
-        alt="BuddhaInu"
-        height="200vh"
-        width="200vw"
-        style="border-radius: 50%"
-      />
+      <img src="assets/mainBuddha.png" alt="BuddhaInu" height="200vh" width="200vw" style="border-radius: 50%" />
     </div>
     <h3 style="font-size: 2em">
       <u> Meet the Team!</u>
@@ -20,21 +14,21 @@
       <div class="col" style="align-items: center" text-center>
         <div class="card" id="teamCard">
           <div class="card-body">
-            <h4><u>BRIAN</u></h4>
-            <img src="assets/ba1.png" width="150" height="150" />
+            <h4><u>Keith Miller</u></h4>
+            <img src="../../../assets/toonverse/DevilCatz/11.png" width="150" height="150" />
             <br /><br />
             <h4><u>CEO</u></h4>
 
             <p>
-              Real estate investor, Defi expert, and small busines owner. Brian
-              enjoys being an artist in his free time and is striving to take
-              this project to the moon.
+              Veteran, Tatooo Shop Owner, Degen Artist.
+              Toonverse is his brainchild and is the main artist for this project.
+
               <br />
             </p>
             <br /><br />
             <br /><br />
-            <br /><br /><br />           <br />
-          
+            <br /><br /><br /> <br />
+
           </div>
         </div>
       </div>
@@ -53,22 +47,11 @@
               PhD canidate. CISSP holder and lover of all things blockchain.
             </p>
             <br />
-            <a
-              mdbRipple
-              class="btn btn-primary btn-floating m-1"
-              style="background-color: #186ae4e1"
-              href="https://www.linkedin.com/in/ericwebb92/"
-              role="button"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
+            <a mdbRipple class="btn btn-primary btn-floating m-1" style="background-color: #186ae4e1"
+              href="https://www.linkedin.com/in/ericwebb92/" role="button"><i class="fab fa-linkedin-in"></i></a>
 
-            <a
-              mdbRipple
-              class="btn btn-primary btn-floating m-1"
-              style="background-color: #18e422"
-              href="https://www.upwork.com/freelancers/~018f6aa33860339019"
-              role="button"
-            >
+            <a mdbRipple class="btn btn-primary btn-floating m-1" style="background-color: #18e422"
+              href="https://www.upwork.com/freelancers/~018f6aa33860339019" role="button">
               <i style="font-size: xx-small"> up <br />work</i>
             </a>
 
