team done for now.

--- a/src/app/components/mint/mint.component.html
+++ b/src/app/components/mint/mint.component.html
@@ -5,7 +5,7 @@
 
 
       <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="400vh" width="400vw"
-        style="border-radius: 5%" />
+        style="border-radius: 5%; top: -90px;" />
       <br>
 
 
