--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,65 +1,130 @@
 <div class="center-div">
-  <div class="card main">
-    <div class="center-img">
-      <img src="assets/mainBuddha.png" alt="BuddhaInu" height="200vh" width="200vw" style="border-radius: 50%" />
-    </div>
-    <h3 style="font-size: 2em">
-      <u> Meet the Team!</u>
-    </h3>
+  <div class="card main" style="min-width: 100%;">
 
-    <p>Our professional team has been hard at work developing this project.</p>
-    <br />
-    <!-- <div class="container" style="background-color: bisque"> -->
-    <div class="row">
-      <div class="col" style="align-items: center" text-center>
-        <div class="card" id="teamCard">
-          <div class="card-body">
-            <h4><u>Keith Miller</u></h4>
-            <img src="../../../assets/toonverse/DevilCatz/11.png" width="150" height="150" />
-            <br /><br />
-            <h4><u>CEO</u></h4>
+    <div class="card-header" style="border-radius: 5%; position: relative; top: -90px;">
 
-            <p>
-              Veteran, Tatooo Shop Owner, Degen Artist.
-              Toonverse is his brainchild and is the main artist for this project.
 
-              <br />
-            </p>
-            <br /><br />
-            <br /><br />
-            <br /><br /><br /> <br />
+      <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="400vh" width="400vw"
+        style="border-radius: 5%" />
+      <br>
+      <h3 class="card-text">
+        <br>
+        <u> Meet the Team!</u>
+      </h3>
 
+
+      <div class="card-body">
+
+        <div class="grid-container">
+          <div class="grid-item" style="float: right;">
+            <div id="card-free-mints">
+              <div class="card-header">
+                <p>Keith Miller</p>
+              </div>
+
+              <div class="card-body">
+                <img id="cloudz-img" src="../../../assets/toonverse/DevilCatz/1331.png" alt="logo" height="200vh"
+                  width="200vw" style="border-radius: 5%" />
+              </div>
+
+              <div class="card-text">
+                <h4><u>CEO / Lead Artist</u></h4>
+
+                <p>
+                  Veteran, Tatooo Shop Owner, Degen Artist.
+                  Toonverse is his brainchild and is the main artist for this project.
+                </p>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="col-md">
-        <div class="card" id="teamCard">
-          <div class="card-body">
-            <h4><u>ERIC</u></h4>
+          <div class="grid-item">
+            <div id="card-free-mints">
+              <div class="card-header">
+                <p>Eric Webb</p>
+              </div>
 
-            <img src="assets/ba2.png" width="150" height="150" />
-            <br /><br />
-            <h4><u>CTO</u></h4>
+              <div class="card-body">
+                <img id="gremlins-img" src="../../../assets/toonverse/DevilCatz/11.png" alt="logo" height="200vh"
+                  width="200vw" style="border-radius: 5%" />
+              </div>
 
-            <p>
-              Our Defi Expert with experience in traditional software
-              development as well as web3. Masters in cybersecurity and current
-              PhD canidate. CISSP holder and lover of all things blockchain.
-            </p>
-            <br />
-            <a mdbRipple class="btn btn-primary btn-floating m-1" style="background-color: #186ae4e1"
-              href="https://www.linkedin.com/in/ericwebb92/" role="button"><i class="fab fa-linkedin-in"></i></a>
+              <div class="card-text">
+                <h4><u>CTO</u></h4>
 
-            <a mdbRipple class="btn btn-primary btn-floating m-1" style="background-color: #18e422"
-              href="https://www.upwork.com/freelancers/~018f6aa33860339019" role="button">
-              <i style="font-size: xx-small"> up <br />work</i>
-            </a>
-
-            <p>Discord ID : WEBBRICO#7151</p>
+                <p>
+                  Defi Expert, CISSP holder, PhD student.
+                </p> <br>
+                <br>
+              </div>
+            </div>
           </div>
+
+
+          <div class="grid-item">
+            <div id="card-free-mints">
+              <div class="card-header">
+                <p>Ryan Siegel</p>
+              </div>
+
+              <div class="card-body">
+                <img id="gremlins-img" src="../../../assets/toonverse/customs/1600.png" alt="logo" height="200vh"
+                  width="200vw" style="border-radius: 5%" />
+              </div>
+
+              <div class="card-text">
+                <h4><u>CFO</u></h4>
+                <br>
+                <br>
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="grid-item">
+            <div id="card-free-mints">
+              <div class="card-header">
+                <p>TJ Roobs</p>
+              </div>
+
+              <div class="card-body">
+                <img id="gremlins-img" src="../../../assets/toonverse/customs/1000.png" alt="logo" height="200vh"
+                  width="200vw" style="border-radius: 5%" />
+              </div>
+
+              <div class="card-text">
+                <h4><u>Community Engagement</u></h4>
+                <br>
+                <br>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="grid-item">
+            <div id="card-free-mints">
+              <div class="card-header">
+                <p>Sister Blockchain</p>
+              </div>
+
+              <div class="card-body">
+                <img id="gremlins-img" src="../../../assets/toonverse/customs/1048.png" alt="logo" height="200vh"
+                  width="200vw" style="border-radius: 5%" />
+              </div>
+
+              <div class="card-text">
+                <h4><u>Community Engagement</u></h4>
+                <br>
+                <br>
+              </div>
+            </div>
+          </div>
+
         </div>
+
+
+
+
       </div>
     </div>
-    <br />
   </div>
-</div>
