View your Catz coming along.

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -27,17 +27,21 @@
       <!-- Left links -->
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item" id="nav-item">
-          <p id="navbar-text" class="styled" [routerLink]="['/home']">about</p>
+          <p id="navbar-text" class="styled" [routerLink]="['/about']">About</p>
         </li>
         <li class="nav-item">
           <p id="navbar-text" class="styled" [routerLink]="['/team']">Team</p>
         </li>
+
         <li class="nav-item">
+          <p id="navbar-text"  class="styled"[routerLink]="['/viewcatz']">View Catz</p>
+        </li> -->
+        <!-- <li class="nav-item">
           <p id="navbar-text"  class="styled"[routerLink]="['/roadmap']">RoadMap</p>
         </li>
         <li class="nav-item">
           <p id="navbar-text"  class="styled"[routerLink]="['/mint']">Free Mints</p>
-        </li>
+        </li> -->
       </ul>
       <!-- Left links -->
 
