--- a/src/app/viewcatz/viewcatz.component.html
+++ b/src/app/viewcatz/viewcatz.component.html
@@ -25,8 +25,8 @@
                 <div class="col-4">
                     <div id="card-devilcat" style="min-height:100%">
                         <p>Eth Address Lookup</p>
-                        <mdb-form-control>
-                            <input mdbInput type="text" id="typeText" class="styled" placeholder="Eth Address" />
+                        <mdb-form-control >
+                            <input mdbInput (ngModelChange)="updateSearchedAddress($event)" [ngModel]="searchedAddress"  type="text" id="typeText" class="styled" placeholder="Eth Address" />
                             <label mdbLabel class="styled" for="typeText">Search</label>
                             <!-- <button style="float: right; justify-content: center; justify-items: center;">Go</button> -->
                         </mdb-form-control>
@@ -42,6 +42,7 @@
 
                         <mdb-form-control>
                             <input mdbInput type="text" id="typeText" placeholder="DevilCatID#" class="styled" />
+                            <p> Lookup : {{searchedAddress}} ?</p>
                             <label mdbLabel class="styled" for="typeText">Search</label>
                         </mdb-form-control>
                     </div>
@@ -50,118 +51,6 @@
 
         </div>
 
-        <!-- <div class="card-body">
-  
-          <div class="grid-container">
-            <div class="grid-item" style="float: right;">
-              <div id="card-free-mints">
-                <div class="card-header">
-                  <p>Keith Miller</p>
-                </div>
-  
-                <div class="card-body">
-                  <img id="cloudz-img" src="../../../assets/toonverse/DevilCatz/1331.png" alt="logo" height="200vh"
-                    width="200vw" style="border-radius: 5%" />
-                </div>
-  
-                <div class="card-text">
-                  <h4><u>CEO / Lead Artist</u></h4>
-  
-                  <p>
-                    Veteran, Tatooo Shop Owner, Degen Artist.
-                    Toonverse is his brainchild and is the main artist for this project.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="grid-item">
-              <div id="card-free-mints">
-                <div class="card-header">
-                  <p>Eric Webb</p>
-                </div>
-  
-                <div class="card-body">
-                  <img id="gremlins-img" src="../../../assets/toonverse/DevilCatz/11.png" alt="logo" height="200vh"
-                    width="200vw" style="border-radius: 5%" />
-                </div>
-  
-                <div class="card-text">
-                  <h4><u>CTO</u></h4>
-  
-                  <p>
-                    Defi Expert, CISSP holder, PhD student.
-                  </p> <br>
-                  <br>
-                </div>
-              </div>
-            </div>
-  
-  
-            <div class="grid-item">
-              <div id="card-free-mints">
-                <div class="card-header">
-                  <p>Ryan Siegel</p>
-                </div>
-  
-                <div class="card-body">
-                  <img id="gremlins-img" src="../../../assets/toonverse/customs/1600.png" alt="logo" height="200vh"
-                    width="200vw" style="border-radius: 5%" />
-                </div>
-  
-                <div class="card-text">
-                  <h4><u>CFO</u></h4>
-                  <br>
-                  <br>
-                </div>
-              </div>
-            </div>
-  
-  
-  
-            <div class="grid-item">
-              <div id="card-free-mints">
-                <div class="card-header">
-                  <p>TJ Roobs</p>
-                </div>
-  
-                <div class="card-body">
-                  <img id="gremlins-img" src="../../../assets/toonverse/customs/1000.png" alt="logo" height="200vh"
-                    width="200vw" style="border-radius: 5%" />
-                </div>
-  
-                <div class="card-text">
-                  <h4><u>Community Engagement</u></h4>
-                  <br>
-                  <br>
-                </div>
-              </div>
-            </div>
-  
-  
-            <div class="grid-item">
-              <div id="card-free-mints">
-                <div class="card-header">
-                  <p>Sister Blockchain</p>
-                </div>
-  
-                <div class="card-body">
-                  <img id="gremlins-img" src="../../../assets/toonverse/customs/1048.png" alt="logo" height="200vh"
-                    width="200vw" style="border-radius: 5%" />
-                </div>
-  
-                <div class="card-text">
-                  <h4><u>Community Engagement</u></h4>
-                  <br>
-                  <br>
-                </div>
-              </div>
-            </div>
-  
-          </div>
-  
-  
-  
-  
-        </div> -->
+        Results for {{searchedAddress}}...
     </div>
 </div>
